FreeBASIC/inc/gtk/gtk/gtktypebuiltins.bi

''
''
'' gtktypebuiltins -- header translated with help of SWIG FB wrapper
''
'' NOTICE: This file is part of the FreeBASIC Compiler package and can't
''         be included in other distributions without authorization.
''
''
#ifndef __gtktypebuiltins_bi__
#define __gtktypebuiltins_bi__

#include once "gtk/glib-object.bi"

declare function gtk_accel_flags_get_type cdecl alias "gtk_accel_flags_get_type" () as GType
declare function gtk_calendar_display_options_get_type cdecl alias "gtk_calendar_display_options_get_type" () as GType
declare function gtk_cell_renderer_state_get_type cdecl alias "gtk_cell_renderer_state_get_type" () as GType
declare function gtk_cell_renderer_mode_get_type cdecl alias "gtk_cell_renderer_mode_get_type" () as GType
declare function gtk_cell_type_get_type cdecl alias "gtk_cell_type_get_type" () as GType
declare function gtk_clist_drag_pos_get_type cdecl alias "gtk_clist_drag_pos_get_type" () as GType
declare function gtk_button_action_get_type cdecl alias "gtk_button_action_get_type" () as GType
declare function gtk_ctree_pos_get_type cdecl alias "gtk_ctree_pos_get_type" () as GType
declare function gtk_ctree_line_style_get_type cdecl alias "gtk_ctree_line_style_get_type" () as GType
declare function gtk_ctree_expander_style_get_type cdecl alias "gtk_ctree_expander_style_get_type" () as GType
declare function gtk_ctree_expansion_type_get_type cdecl alias "gtk_ctree_expansion_type_get_type" () as GType
declare function gtk_debug_flag_get_type cdecl alias "gtk_debug_flag_get_type" () as GType
declare function gtk_dialog_flags_get_type cdecl alias "gtk_dialog_flags_get_type" () as GType
declare function gtk_response_type_get_type cdecl alias "gtk_response_type_get_type" () as GType
declare function gtk_dest_defaults_get_type cdecl alias "gtk_dest_defaults_get_type" () as GType
declare function gtk_target_flags_get_type cdecl alias "gtk_target_flags_get_type" () as GType
declare function gtk_anchor_type_get_type cdecl alias "gtk_anchor_type_get_type" () as GType
declare function gtk_arrow_type_get_type cdecl alias "gtk_arrow_type_get_type" () as GType
declare function gtk_attach_options_get_type cdecl alias "gtk_attach_options_get_type" () as GType
declare function gtk_button_box_style_get_type cdecl alias "gtk_button_box_style_get_type" () as GType
declare function gtk_curve_type_get_type cdecl alias "gtk_curve_type_get_type" () as GType
declare function gtk_delete_type_get_type cdecl alias "gtk_delete_type_get_type" () as GType
declare function gtk_direction_type_get_type cdecl alias "gtk_direction_type_get_type" () as GType
declare function gtk_expander_style_get_type cdecl alias "gtk_expander_style_get_type" () as GType
declare function gtk_icon_size_get_type cdecl alias "gtk_icon_size_get_type" () as GType
declare function gtk_side_type_get_type cdecl alias "gtk_side_type_get_type" () as GType
declare function gtk_text_direction_get_type cdecl alias "gtk_text_direction_get_type" () as GType
declare function gtk_justification_get_type cdecl alias "gtk_justification_get_type" () as GType
declare function gtk_match_type_get_type cdecl alias "gtk_match_type_get_type" () as GType
declare function gtk_menu_direction_type_get_type cdecl alias "gtk_menu_direction_type_get_type" () as GType
declare function gtk_metric_type_get_type cdecl alias "gtk_metric_type_get_type" () as GType
declare function gtk_movement_step_get_type cdecl alias "gtk_movement_step_get_type" () as GType
declare function gtk_scroll_step_get_type cdecl alias "gtk_scroll_step_get_type" () as GType
declare function gtk_orientation_get_type cdecl alias "gtk_orientation_get_type" () as GType
declare function gtk_corner_type_get_type cdecl alias "gtk_corner_type_get_type" () as GType
declare function gtk_pack_type_get_type cdecl alias "gtk_pack_type_get_type" () as GType
declare function gtk_path_priority_type_get_type cdecl alias "gtk_path_priority_type_get_type" () as GType
declare function gtk_path_type_get_type cdecl alias "gtk_path_type_get_type" () as GType
declare function gtk_policy_type_get_type cdecl alias "gtk_policy_type_get_type" () as GType
declare function gtk_position_type_get_type cdecl alias "gtk_position_type_get_type" () as GType
declare function gtk_preview_type_get_type cdecl alias "gtk_preview_type_get_type" () as GType
declare function gtk_relief_style_get_type cdecl alias "gtk_relief_style_get_type" () as GType
declare function gtk_resize_mode_get_type cdecl alias "gtk_resize_mode_get_type" () as GType
declare function gtk_signal_run_type_get_type cdecl alias "gtk_signal_run_type_get_type" () as GType
declare function gtk_scroll_type_get_type cdecl alias "gtk_scroll_type_get_type" () as GType
declare function gtk_selection_mode_get_type cdecl alias "gtk_selection_mode_get_type" () as GType
declare function gtk_shadow_type_get_type cdecl alias "gtk_shadow_type_get_type" () as GType
declare function gtk_state_type_get_type cdecl alias "gtk_state_type_get_type" () as GType
declare function gtk_submenu_direction_get_type cdecl alias "gtk_submenu_direction_get_type" () as GType
declare function gtk_submenu_placement_get_type cdecl alias "gtk_submenu_placement_get_type" () as GType
declare function gtk_toolbar_style_get_type cdecl alias "gtk_toolbar_style_get_type" () as GType
declare function gtk_update_type_get_type cdecl alias "gtk_update_type_get_type" () as GType
declare function gtk_visibility_get_type cdecl alias "gtk_visibility_get_type" () as GType
declare function gtk_window_position_get_type cdecl alias "gtk_window_position_get_type" () as GType
declare function gtk_window_type_get_type cdecl alias "gtk_window_type_get_type" () as GType
declare function gtk_wrap_mode_get_type cdecl alias "gtk_wrap_mode_get_type" () as GType
declare function gtk_sort_type_get_type cdecl alias "gtk_sort_type_get_type" () as GType
declare function gtk_im_preedit_style_get_type cdecl alias "gtk_im_preedit_style_get_type" () as GType
declare function gtk_im_status_style_get_type cdecl alias "gtk_im_status_style_get_type" () as GType
declare function gtk_file_chooser_action_get_type cdecl alias "gtk_file_chooser_action_get_type" () as GType
declare function gtk_file_chooser_error_get_type cdecl alias "gtk_file_chooser_error_get_type" () as GType
declare function gtk_file_filter_flags_get_type cdecl alias "gtk_file_filter_flags_get_type" () as GType
declare function gtk_icon_lookup_flags_get_type cdecl alias "gtk_icon_lookup_flags_get_type" () as GType
declare function gtk_icon_theme_error_get_type cdecl alias "gtk_icon_theme_error_get_type" () as GType
declare function gtk_image_type_get_type cdecl alias "gtk_image_type_get_type" () as GType
declare function gtk_message_type_get_type cdecl alias "gtk_message_type_get_type" () as GType
declare function gtk_buttons_type_get_type cdecl alias "gtk_buttons_type_get_type" () as GType
declare function gtk_notebook_tab_get_type cdecl alias "gtk_notebook_tab_get_type" () as GType
declare function gtk_object_flags_get_type cdecl alias "gtk_object_flags_get_type" () as GType
declare function gtk_arg_flags_get_type cdecl alias "gtk_arg_flags_get_type" () as GType
declare function gtk_private_flags_get_type cdecl alias "gtk_private_flags_get_type" () as GType
declare function gtk_progress_bar_style_get_type cdecl alias "gtk_progress_bar_style_get_type" () as GType
declare function gtk_progress_bar_orientation_get_type cdecl alias "gtk_progress_bar_orientation_get_type" () as GType
declare function gtk_rc_flags_get_type cdecl alias "gtk_rc_flags_get_type" () as GType
declare function gtk_rc_token_type_get_type cdecl alias "gtk_rc_token_type_get_type" () as GType
declare function gtk_size_group_mode_get_type cdecl alias "gtk_size_group_mode_get_type" () as GType
declare function gtk_spin_button_update_policy_get_type cdecl alias "gtk_spin_button_update_policy_get_type" () as GType
declare function gtk_spin_type_get_type cdecl alias "gtk_spin_type_get_type" () as GType
declare function gtk_text_search_flags_get_type cdecl alias "gtk_text_search_flags_get_type" () as GType
declare function gtk_text_window_type_get_type cdecl alias "gtk_text_window_type_get_type" () as GType
declare function gtk_toolbar_child_type_get_type cdecl alias "gtk_toolbar_child_type_get_type" () as GType
declare function gtk_toolbar_space_style_get_type cdecl alias "gtk_toolbar_space_style_get_type" () as GType
declare function gtk_tree_view_mode_get_type cdecl alias "gtk_tree_view_mode_get_type" () as GType
declare function gtk_tree_model_flags_get_type cdecl alias "gtk_tree_model_flags_get_type" () as GType
declare function gtk_tree_view_drop_position_get_type cdecl alias "gtk_tree_view_drop_position_get_type" () as GType
declare function gtk_tree_view_column_sizing_get_type cdecl alias "gtk_tree_view_column_sizing_get_type" () as GType
declare function gtk_ui_manager_item_type_get_type cdecl alias "gtk_ui_manager_item_type_get_type" () as GType
declare function gtk_widget_flags_get_type cdecl alias "gtk_widget_flags_get_type" () as GType
declare function gtk_widget_help_type_get_type cdecl alias "gtk_widget_help_type_get_type" () as GType

#endif
